# grip-on-llms

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: flake_workflow.yml  leaderboard.yml
docs/: README.md  aspects.md  benchmarks.md  benchmarks_factuality.md  benchmarks_simplification.md  benchmarks_summarization.md  models.md  sustainability.md
llm-eval-website/: CHANGELOG.md  _config.yml  _config_dev.yml  index.html
llm-eval-website/_data/: models.json  translations_en.yml  translations_nl.yml
llm-eval-website/_includes/: energy_disclaimer.html  footer.html  header.html  intro.html  language_toggle.html  license_cell.html  llm_overview.html  score_circle.html  score_header.html
llm-eval-website/assets/css/: style.css
llm-eval-website/assets/css/fonts/: fonts.css
llm-eval-website/assets/js/: script.js
llm-eval-website/en/: index.html
llm-eval-website/nl/: index.html
llm_eval/benchmarks/: __init__.py  arc.py  base.py  mmlu.py  mmlu_nl.py  summarization.py
llm_eval/benchmarks/metrics/: __init__.py  classification.py  seq_to_seq_metrics.py
llm_eval/benchmarks/simplification/: __init__.py  amsterdam_simplification.py  base.py  int_duidelijke_taal.py  metrics.py  test_data.ipynb
llm_eval/benchmarks/summarization/: __init__.py  base.py  cnn_dailymail.py  huggingface.py  xsum.py
llm_eval/benchmarks/tiny_benchmarks/: __init__.py  arc.py  base.py  base_mc.py  mmlu.py  truthfulQA.py
llm_eval/language_models/: __init__.py  llms.py  model_router.py
llm_eval/language_models/llms/: base.py  huggingface.py  llm_config.py  llm_templates.py  openai.py
llm_eval/leaderboard/: __init__.py  generate_results.py
llm_eval/translators/: __init__.py  base.py  huggingface.py  llm_based.py  translator_config.py  translator_router.py
llm_eval/utils/: __init__.py  exceptions.py  key_vault.py  metadata.py  string_utils.py
src/language_models/: __init__.py  llm_templates.py  llms.py
tests/: env_setup.py  test_benchmarks.py  test_leaderboard.py  test_llms.py
