[tool.poetry]
name = "llm_eval"
version = "0.0.1"
description = "LLM evaluation for municipal use cases"
authors = ["Grip on LLMs, City of Amsterdam"]
packages = [{ include = "llm_eval" }]

[tool.poetry.dependencies]
azure-identity = "^1.20"
azure-keyvault = "~4.1.0"
python = "^3.9"
accelerate = "^1.4.0"
cryptography = "~43.0.3"
dotenv = "^1.0.1"
numpy="^1.17"
openai = "^1.64.0"
torch = "^2.6.0"
transformers = "^4.49.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
flake8-comprehensions = "^3.12.0"
flake8-docstrings = "^1.7.0"
flake8-fixme = "^1.1.1"
mccabe = "^0.7.0"
pep8-naming = "^0.13.3"
pre-commit = "^4.1.0"
